fix(HPO/MONDO): SKFP-686 fix overlap

--- a/src/views/DataExploration/components/TreeFacet/index.module.scss
+++ b/src/views/DataExploration/components/TreeFacet/index.module.scss
@@ -6,6 +6,7 @@
     width: auto;
     height: auto;
     min-height: 600px;
+    overflow: hidden;
 
     .highlight {
       background-color: yellow;
